<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_text"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/vns"
        android:scaleType="fitXY"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/desc_img"
        android:outlineSpotShadowColor="@color/colorPrimary"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="160dp"
            android:layout_height="50dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/btn_favourite"
            android:textColor="@color/white_text"

            android:background="@drawable/shadow_button_background_red"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="50dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="15dp"
            android:background="@drawable/shadow_button_background_blue"
            android:text="@string/btn_popular"
            android:textColor="@color/white_text"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="160dp"
            android:layout_height="50dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/btn_food"
            android:textColor="@color/white_text"
            android:background="@drawable/shadow_button_background_yellow"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="50dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="15dp"
            android:background="@drawable/shadow_button_background_green"
            android:text="@string/btn_near"
            android:textColor="@color/white_text"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_list">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>